objects/Product2.object
<CustomObject>
    <fields>
        <fullName>Business_Org__c</fullName>
        <label>Business Org</label>
        <picklist>
            <picklistValues>
                <fullName>3B6</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Actia</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Amca</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Arens</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Argo-Hytos</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Axiomatic</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bauser</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bondioli &amp; Pavesi</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bosch Rexroth</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Brevini</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Brosa</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bucher</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Buchholz Hydraulik</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Caldaro</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Captive</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Casappa</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CH Products</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Comatrol</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Command Controls</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Concentric</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CrossControl</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Curtis Instruments</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Danaher</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Danfoss</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>David Brown</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Delta</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DeltaTech Controls</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Dinamic Oil</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Doosan Mottrol</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Dynamatic</fullName>
            </picklistValues>
            <sorted>true</sorted>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Business_Unit__c</fullName>
        <inlineHelpText>Climate and Energy users should read CE title</inlineHelpText>
        <label>Business Unit / Product Line (CE)</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Competitor__c</fullName>
        <label>Competitor</label>
        <picklist>
            <picklistValues>
                <fullName>Argo Hytos</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Atlantic Fluidpress</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bosch Rexroth</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Brevini</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bucher</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Buchholz</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Casappa</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Command Controls</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Concentric </fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Danaher</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Delta</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Dinamic Oil</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Dynamatic</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Eaton</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Hawe</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>HBS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Horde</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>HPI</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Husco</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Hydac</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Hyde</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Hydraforce</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>HydroControl</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Hydrocontrols</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Integrated Hydraulics</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Iskra</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Kawasaki</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Kayaba</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Kersen</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Lifan</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Division__c</fullName>
        <label>Division</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Family__c</fullName>
        <label>Family</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Model_Code__c</fullName>
        <label>Model Code</label>
        <length>240</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product_Line_Description__c</fullName>
        <label>Product Line Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product_Line__c</fullName>
        <inlineHelpText>Climate and Energy users should read CE title</inlineHelpText>
        <label>Product Line / Product Class (CE)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product_Set__c</fullName>
        <inlineHelpText>Climate and Energy users should read CE title</inlineHelpText>
        <label>Product Set / Stat Nr</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Proprietary__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This field indicates whether this product is a proprietary product.</description>
        <label>Proprietary</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SAP_Business_Unit_Code__c</fullName>
        <label>SAP Business Unit Code</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SAP_Division_Code__c</fullName>
        <label>SAP Division Code</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SAP_Family_Code__c</fullName>
        <label>SAP Family Code</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SAP_Material_Code_CE__c</fullName>
        <externalId>true</externalId>
        <label>SAP_Material_Code_CE</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SAP_Material_Code__c</fullName>
        <externalId>true</externalId>
        <label>SAP Material Code</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SAP_Product_Line_Code__c</fullName>
        <externalId>true</externalId>
        <label>SAP Product Line Code</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SAP_Product_Set_Code__c</fullName>
        <externalId>true</externalId>
        <label>SAP Product Hierarchy Code</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ccpe_ocp__Project__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Project</label>
        <lookupFilter>
            <active>true</active>
            <errorMessage>The selected Project is not a Project Template.</errorMessage>
            <filterItems>
                <field>project_cloud__Project__c.project_cloud__IsTemplate__c</field>
                <operation>equals</operation>
                <value>True</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>project_cloud__Project__c</referenceTo>
        <relationshipLabel>Products</relationshipLabel>
        <relationshipName>Products</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>isProductGroupOnly__c</fullName>
        <defaultValue>false</defaultValue>
        <label>isProductGroupOnly</label>
        <type>Checkbox</type>
    </fields>
    <recordTypes>
        <fullName>Product_CE</fullName>
        <active>true</active>
        <description>Climate &amp; Energi Product</description>
        <label>Product (CE)</label>
    </recordTypes>
    <recordTypes>
        <fullName>Product_PS</fullName>
        <active>true</active>
        <description>Power Solutions Product</description>
        <label>Product (PS)</label>
    </recordTypes>
    <validationRules>
        <fullName>Only_API_can_edit_Name</fullName>
        <active>true</active>
        <description>For Product (PS) record type only [or NULL record type for all products existing before CE record type was created]</description>
        <errorConditionFormula>AND(RecordType.DeveloperName != &apos;Product_CE&apos;, 
$Profile.Name != &apos;API_only_user&apos;, 
ISCHANGED(Name))</errorConditionFormula>
        <errorDisplayField>Name</errorDisplayField>
        <errorMessage>Editing the Product Description is only allowed by integration.</errorMessage>
    </validationRules>
</CustomObject>